<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ConsoleActivity">

<!--  CMD line window  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:hint="@string/hlpCommand"
                android:inputType="text" />

            <Button
                android:id="@+id/buttonSend"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:onClick="onClickSend"
                android:text="@string/send" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonQuickLs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClickQuickLs"
                android:text="ls" />

            <Button
                android:id="@+id/buttonQuickBat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClickQuickBat"
                android:text="bat" />

            <Button
                android:id="@+id/buttonQuickRm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClickQuickRm"
                android:text="rm"
                android:textColor="@drawable/risky_button" />

            <Button
                android:id="@+id/buttonQuickOff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClickQuickOff"
                android:text="off" />

        </LinearLayout>
    </LinearLayout>

<!-- CONSOLE WINDOW   -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:background="@drawable/border"
        android:orientation="horizontal">
        
        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:paddingLeft="2dp"
            android:enabled="true"
            android:gravity="bottom"
            android:hint=">"
            android:scrollbars="vertical" />

        <Button
            android:id="@+id/buttonClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right|end"
            android:onClick="onClickClear"
            android:text="@string/clear" />
    </LinearLayout>

</LinearLayout>
